fix: scrolling issues on iOS touch devices

--- a/theme/styles/_base.styl
+++ b/theme/styles/_base.styl
@@ -54,7 +54,7 @@ hr
 a:hover,
 a:focus
   text-decoration: none
-  text-transform: uppercase
+  // text-transform: uppercase
 
 .link-deactivated
   opacity: 0.5
@@ -108,7 +108,7 @@ a:focus
 .button:focus,
 .button-tickets:focus
   background-color: $jsuPurpleDark
-  text-transform: uppercase
+  // text-transform: uppercase
 
 .onimage
   color: $jsuFontColorOnimage
